[package]
name = "tangle"
version = "0.1.0"
edition = "2018"

[profile.dev]
incremental = true

[features]
default = ["eframe/persistence", "serde"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tangle"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
enum-map = "*"
tree-sitter-highlight = "0.20.1"
pyo3 = { version = "0.15.1", features = ["extension-module"] }
egui = {version = "0.16.0", features = ["persistence", "serde"] }
eframe = {version = "0.16.0", features = ["persistence"] }
tree-sitter = "0.20"
tree-sitter-python = "0.19"
indexmap = { version = "1.8.0", features = ["serde"] }
fn-memo = "1.2.0"
smol_str = "0.1.21"
numpy = "0.15"
lazy_static = "1.4"
sexp = "1.1.4"
topological-sort = "0.1.0"